# devdash

./: .gitignore  LICENSE  README.md  pyproject.toml
devdash/: __init__.py  __main__.py  cli.py  dashboard.py  git_utils.py  package_utils.py  port_utils.py  system_utils.py
tests/: __init__.py  test_git.py  test_ports.py  test_system.py
